INCLUDE_DIRECTORIES(
Collision
Collision/Management
Collision/Maps
Collision/Models
Configuration
Cryptography
Cryptography/Authentication
Database
DataStores
Debugging
Dynamic
Dynamic/LinkedReference
Logging
Packets
Threading
Utilities
../main/Entities/Object
../../dep/mysql
../../dep/mersennetwister
../../dep/utf8cpp
../../dep/mysql/extra/yassl/include
../../dep/sockets/include
../../dep/sockets
../../dep
../../dep/mysql/include
../../dep/g3dlite/include
../../dep/g3dlite
)

SET (shared_STAT_SRCS
Collision/BoundingIntervalHierarchy.cpp
Collision/Management/VMapFactory.cpp
Collision/Management/VMapManager2.cpp
Collision/Maps/MapTree.cpp
Collision/Maps/TileAssembler.cpp
Collision/Models/ModelInstance.cpp
Collision/Models/WorldModel.cpp
Common.cpp
Configuration/Config.cpp
Cryptography/ARC4.cpp
Cryptography/Authentication/AuthCrypt.cpp
Cryptography/BigNumber.cpp
Cryptography/HMACSHA1.cpp
Cryptography/SHA1.cpp
Database/AdhocStatement.cpp
Database/Field.cpp
Database/Implementation/CharacterDatabase.cpp
Database/Implementation/LoginDatabase.cpp
Database/Implementation/WorldDatabase.cpp
Database/MySQLConnection.cpp
Database/PreparedStatement.cpp
Database/QueryHolder.cpp
Database/QueryResult.cpp
Database/SQLStorage.cpp
Database/Transaction.cpp
DataStores/DB2FileLoader.cpp
DataStores/DBCFileLoader.cpp
Logging/Log.cpp
Threading/DelayExecutor.cpp
Threading/Threading.cpp
Utilities/EventProcessor.cpp
Utilities/ServiceWin32.cpp
Utilities/Util.cpp

#SHARED_HEADER_FILES
Collision/BoundingIntervalHierarchy.h
Collision/Management/IVMapManager.h
Collision/Management/VMapFactory.h
Collision/Management/VMapManager2.h
Collision/Maps/MapTree.h
Collision/Maps/TileAssembler.h
Collision/Models/ModelInstance.h
Collision/Models/WorldModel.h
Collision/VMapDefinitions.h
Collision/VMapTools.h
Common.h
CompilerDefs.h
Configuration/Config.h
Cryptography/ARC4.h
Cryptography/Authentication/AuthCrypt.h
Cryptography/BigNumber.h
Cryptography/HMACSHA1.h
Cryptography/SHA1.h
Database/AdhocStatement.h
Database/DatabaseEnv.h
Database/DatabaseWorker.h
Database/DatabaseWorkerPool.h
Database/Field.h
Database/Implementation/CharacterDatabase.h
Database/Implementation/LoginDatabase.h
Database/Implementation/WorldDatabase.h
Database/MySQLConnection.h
Database/MySQLThreading.h
Database/PreparedStatement.h
Database/QueryHolder.h
Database/QueryResult.h
Database/SQLOperation.h
Database/SQLStorage.h
Database/SQLStorageImpl.h
Database/Transaction.h
DataStores/DB2FileLoader.h
DataStores/DB2Store.h
DataStores/DBCFileLoader.h
DataStores/DBCStore.h
Debugging/Errors.h
Define.h
Dynamic/FactoryHolder.h
Dynamic/LinkedList.h
Dynamic/LinkedReference/Reference.h
Dynamic/LinkedReference/RefManager.h
Dynamic/ObjectRegistry.h
Dynamic/TypeContainer.h
Dynamic/TypeContainerFunctions.h
Dynamic/TypeContainerFunctionsPtr.h
Dynamic/TypeContainerVisitor.h
Dynamic/TypeList.h
Dynamic/UnorderedMap.h
Logging/Log.h
Packets/ByteBuffer.h
Packets/WorldPacket.h
SystemConfig.h
Threading/Callback.h
Threading/DelayExecutor.h
Threading/LockedQueue.h
Threading/Threading.h
Utilities/ByteConverter.h
Utilities/EventProcessor.h
Utilities/ServiceWin32.h
Utilities/SignalHandler.h
Utilities/Timer.h
Utilities/Util.h
)

add_library(shared STATIC ${shared_STAT_SRCS})
target_link_libraries(
shared
${ACE_LIBRARY}
)

